--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -1,22 +1,24 @@
 #container{
-    background: #f2f2f2;
-    padding: 100px 300px;
+    height: 90%;
 }
 
 /* Chat area */
 #chat-area{
-    display: flex;
-    height: 80%;
+    height: 90%;
 }
+
+
 #messages{
     background: #fff;
     border: 1px solid #999;
     border-radius: 20px 0px 0px 0px;
     display: flex;
-    overflow: auto;
     flex: 3;
     padding: 20px;
+    overflow: scroll;
+    max-height: 100%;
 }
+/*
 #user-list{
     background: #fff;
     border: 1px solid #999;
@@ -26,9 +28,8 @@
     margin-left: 20px;
     padding: 20px;
 }
-
 /* Formulario de envío de mensajes */
-#send-msg-form{
+/*#send-msg-form{
     display: flex;
     padding-top: 20px;
     height: 20%;
@@ -42,6 +43,7 @@
     font-size: 14px;
     resize: none;
 }
+
 #send-msg-btn{
     background: rgb(33, 95, 228);
     border-radius: 0px 0px 20px 0px;
@@ -57,40 +59,19 @@
 }
 
 /* Usuarios en linea */
-.user{
-    margin: 10px 0px;
-}
-.online-icon{
-    color: rgb(43, 255, 0);
-    margin-right: 5px;
-}
 
-/* mensajes */
-.my-msg{
-    justify-content: flex-end;
+@media (min-width: 1200px) {
+    .p-5 {
+        padding: 40px 200px !important;
+    }
 }
-.my-style-m{
-    background: rgb(191, 202, 233);
-    border: 1px solid rgb(79, 79, 187);
-    color: rgb(0, 0, 0);
-}
-.my-style-f{
-    background: rgb(233, 191, 224);
-    border: 1px solid rgb(187, 79, 182);
-    color: rgb(0, 0, 0);
-}
-.blue{
-    background: rgb(70, 104, 216);
-    border: 1px solid rgb(6, 6, 196);
-    color: #fff;
-}
-.pink{
-    background: rgb(252, 114, 114);
-    border: 1px solid rgb(255, 60, 93);
-}
-.message{
-    border-radius: 10px;
-    margin-bottom: 10px;
-    overflow-x: auto;
-    padding: 10px;
-}
+@media (max-width: 600px) {
+    .p-5 {
+        padding: 15px !important;
+    }
+
+    #container{
+        height: 97%;
+    }
+
+  }
