--- a/views/chat.pug
+++ b/views/chat.pug
@@ -5,22 +5,25 @@ html(lang="es")
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title My Chat App
+        link(rel="stylesheet", href="/css/bootstrap.min.css")
         link(rel="stylesheet", href="/css/main.css")
         link(rel="stylesheet", href="/css/chat.css")
         link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css")
         script(src="/socket.io/socket.io.js")
         script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js")
+        script(src="/scripts/bootstrap.min.js")
         script(src="/scripts/chat.js")
     body 
-        #container.full-height.full-width
-            #chat-area.full-width
-                #messages.full-height
+        #container.p-5
+            #chat-area.row.m-0.container-fluid-md.border.rounded-3.p-3
+                #messages.container.col-8.border.rounded-3.p-2
                     #msg-list.full-width
-                #user-list.full-height
+                #user-list.container.col-3.border.rounded-3.p-3
                     .full-width.full-height
                         h3 Usuarios en linea
                         #users
             form#send-msg-form
-                textarea#message.lighter(name="message", placeholder="Escribe aquí tu mensaje")
-                button#send-msg-btn
-                    i.fa.fa-comment
+                .input-group.mt-3
+                    textarea#message.form-control.lighter(name="message", placeholder="Escribe aquí tu mensaje")
+                    button#send-msg-btn.btn.btn-outline-primary
+                        i.fas.fa-paper-plane
