--- a/views/chat.pug
+++ b/views/chat.pug
@@ -5,6 +5,7 @@ html(lang="es")
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title My Chat App
+        link(rel="shortcut icon" href="images/favicoin.ico")
         link(rel="stylesheet", href="/css/bootstrap.min.css")
         link(rel="stylesheet", href="/css/main.css")
         link(rel="stylesheet", href="/css/chat.css")
