--- a/views/index.pug
+++ b/views/index.pug
@@ -12,7 +12,7 @@ html(lang="es")
         script(src="/scripts/registro.js")
     body
         #welcome(class="full-height full width")
-            form#registro-form(action="http://localhost:3000/chat", method="POST")
+            form#registro-form(action="./chat", method="POST")
                 h1(class="center") Bienvenido!
                 p(class="center lighter") Ingresa tus datos, por favor:
                 input#username(class="full-width", type="text", name="username", placeholder="Tu usuario aquí...", required=true)
