Ajuste en la pagina de mantenimiento

--- a/views/chat.pug
+++ b/views/chat.pug
@@ -24,11 +24,11 @@ html(lang="es")
             div.text-center
                 img.mx-3(src="images/node.png" width="80" height="40")
                 img(src="images/socketio.png" width="40" height="40")
-        #container.px-5.py-3
+        #container
             #chat-area.row.m-0.container-fluid-md.border.rounded-3.p-3
-                #messages.container.col-8.border.rounded-3.p-2
+                #messages.container.col-sm-12.col-lg-8.border.rounded-3.p-2
                     #msg-list.full-width
-                #user-list.container.col-3.border.rounded-3.p-3
+                #user-list.container.col-sm-12.col-lg-3.border.rounded-3.p-3
                     .full-width.full-height
                         h4 Usuarios en linea
                         #users.list-group
